fix(swap): ensure 'Security & Privacy' is blue coloured in dark mode

--- a/ui/app/css/itcss/components/swap.scss
+++ b/ui/app/css/itcss/components/swap.scss
@@ -606,7 +606,7 @@
     font-size: 0.75rem;
 
     span {
-      color: #2f9ae0;
+      color: #2f9ae0 !important;
     }
 
     a {
